fix: adjust spacing

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -193,14 +193,18 @@ search-option.input {
 
 .form-card {
   background: var(--white);
-  border-radius: 50px;
-  padding: 2rem;
+  border-radius: 5rem;
+  padding: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 600px; 
-  margin: 2rem auto;
+  margin: 1rem auto;
 }
 
 .posts-heading{
   margin-top: 5rem;
+}
+
+.card.form-card.rounded-custom {
+  border-radius: 3rem;
 }
